let's hope this works

--- a/src/makefile
+++ b/src/makefile
@@ -11,17 +11,19 @@ AR          =     ar rv
 CFLAGS    = -O2 -I../include
 FFLAGS    = $(OPTFLAGS) -fallow-argument-mismatch
 
-LIB_BLAS = -lblis
+# LIB_BLAS = -qmkl-ilp64=parallel -lmkl_scalapack_ilp64 -lmkl_blacs_openmpi_ilp64
+# LIB_BLAS =
 LIB_METIS = -lmetis
 
 LIB_FEPG     = ${EXT}/lib/libfepg.a
 LIB_FEPGSOLV = ${EXT}/lib/libfepgsolv.a
 
-LIB_LAPACK = -lflame
+# LIB_LAPACK = -llapack
 
 LIB_MATH  = -lm
 
 LIBS      = $(LIB_BLAS) $(LIB_FEPG) $(LIB_LAPACK) $(LIB_METIS) $(LIB_FEPGSOLV) $(LIB_LINUX)
+LDFLAGS   = -mkl=parallel
 
 COBJ   = incore.o mazsendpart.o mazrecvpart.o msazrecvpart.o\
          timer.o inimpi.o intcommu.o realcommu.o 
@@ -30,7 +32,7 @@ FOBJ   = ddm.o esddm.o mstart.o mbft.o nuc8g2.o agq4.o alq4.o mgather.o
 default: ddm
 
 ddm:${COBJ} ${FOBJ}
-	$(FLINKER) -o $@ $(FOBJ) $(COBJ) $(LIBS) $(LIB_MATH)
+	$(FLINKER) -o $@ $(FOBJ) $(COBJ) $(LIBS) $(LIB_MATH) $(LDFLAGS)
 
 move: ddm 
 	mv ddm ddm.default
